<resources>
  <string name="account_settings_action">AndStatus account settings</string>
  <string name="account_settings_activity_title">Account</string>
  <string name="account_settings_summary">Sync frequency, etc.</string>
  <string name="action_bar_background_color_preference_title">Action bar background color</string>
  <string name="action_bar_text_preference_title">Action bar text and icon color</string>
  <string name="action_menu_overflow_description">More actions&#8230;</string>
  <string name="always">Always</string>
  <string name="app_instance_name">App instance name</string>
  <string name="appwidget_configure_instructions">Customize AndStatus Widget message, shown in case nothing new has happened</string>
  <string name="appwidget_nothingnew_default">Nothing new since:</string>
  <string name="appwidget_nodata">No data yet.</string>
  <string name="acquiring_a_request_token_failed">Acquiring a request token failed</string>
  <string name="acquiring_an_access_token_failed">Acquiring an Access token failed</string>
  <string name="attach_images_summary_off">\"Paperclip+\" button, used to attach images to your posts, is hidden</string>
  <string name="attach_images_summary_on">Use the \"Paperclip+\" button (\"Attach\" menu item) to attach images to your note or Share an image to AndStatus from another app</string>
  <string name="attach_images_title">Attach images to my notes</string>
  <string name="attachment_is_too_large">Attachment is too large</string>
  <string name="attachments">Attachments</string>
  <string name="authentication_never">Not authenticated yet</string>
  <string name="authentication_successful">Authentication successful!</string>
  <string name="automatic">Auto</string>
  <string name="backup_downloads">Back up media files: attachments and avatars</string>
  <string name="backup_log_files">Back up log files</string>
  <string name="background_color_preference_title">Background color for the Dark theme</string>
  <string name="button_add">Add</string>
  <string name="button_add_origin">Add new Social Network</string>
  <string name="button_backup">Back up</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_change_folder">Change folder</string>
  <string name="button_create_message">Post</string>
  <string name="button_create_message_twitter">Tweet</string>
  <string name="button_delete">Delete</string>
  <string name="button_discard">Discard</string>
  <string name="button_overflow">Overflow</string>
  <string name="button_restore">Restore</string>
  <string name="button_save">Save</string>
  <string name="button_save_draft">Save draft</string>
  <string name="button_skip">Skip</string>
  <string name="button_send">Send</string>
  <string name="cannot_send_empty_message">Cannot send empty note.</string>
  <string name="category_title_preference_appearance">Appearance</string>
  <string name="category_title_preference_credentials">Account Credentials</string>
  <string name="category_title_preference_information">Information</string>
  <string name="category_title_preference_origin">Social network</string>
  <string name="category_title_preference_settings">Settings</string>
  <string name="change_log_summary">Change Log is in English only</string>
  <string name="changed">Changed</string>
  <string name="check_and_fix_data">Check and fix data</string>
  <string name="check_and_fix_data_summary">Use this action if you feel that AndStatus is malfunctioning,
    but you don\'t want to reinstall it</string>
  <string name="clear_the_queue">Clear the queue</string>
  <string name="client_registration_failed">AndStatus client registration failed</string>
  <string name="collapse_duplicates">Collapse duplicates</string>
  <string name="color_black">Black</string>
  <string name="color_black_cat">Black Cat</string>
  <string name="color_blue">Blue</string>
  <string name="color_light_blue">Light Blue</string>
  <string name="color_material_blue">Material Blue</string>
  <string name="color_my_blue">My Blue</string>
  <string name="color_carbon_grey">Carbon Grey</string>
  <string name="color_charcoal">Charcoal</string>
  <string name="color_grey">Grey</string>
  <string name="color_grey_wolf">Grey Wolf</string>
  <string name="color_green">Green</string>
  <string name="color_midnight">Midnight</string>
  <string name="color_night">Night</string>
  <string name="color_orange">Orange</string>
  <string name="color_red">Red</string>
  <string name="color_teal">Teal</string>
  <string name="color_white">White</string>
  <string name="combined_timeline_on">combined</string>
  <string name="combined_timeline_off_account">for</string>
  <string name="combined_timeline_off_origin">at</string>
  <string name="command_follow_user">Follow</string>
  <string name="command_stop_following_user">Stop following</string>
  <string name="commands_in_a_queue">Commands in a queue</string>
  <string name="count_only">Count only without actual changes?</string>
  <string name="crash_dialog_text">AndStatus application crashed. You can help to fix the problem. Please press Ok button to send the Crash Report to developers via email.</string>
  <string name="crash_dialog_comment_prompt">Please provide below your comments about the problem. It would be very helpful for a fix to know: when it occurred and maybe even how it could be reproduced.</string>
  <string name="created">created</string>
  <string name="created_label">Created</string>
  <string name="custom_locale_title">App language</string>
  <string name="set_as_default_timeline">Set as Default Timeline</string>
  <string name="database_unavailable_description">Local cache (database with notes and activities) couldn\'t be opened. Please reboot your device or reinstall AndStatus.</string>
  <string name="default_timeline_summary">Timeline that will be opened by a Launcher: \"%s\"</string>
  <string name="dialog_title_preference_connection_timeout">Connection timeout in seconds</string>
  <string name="dialog_title_preference_frequency">Updates are fetched every&#8230;</string>
  <string name="dialog_title_preference_history_size">History Size</string>
  <string name="dialog_title_preference_history_time">History Duration</string>
  <string name="dialog_title_preference_min_log_level">Minimum logging level</string>
  <string name="dialog_title_preference_theme_color">Select a Color Theme</string>
  <string name="dialog_title_preference_theme_size">Select a Size</string>
  <string name="dialog_title_select_timeline">Select a Timeline</string>
  <string name="go_to_the_top_title">Go to the Top</string>
  <string name="header_accounts">Accounts</string>
  <string name="maximum_size_of_attachment_mb">Maximum size of an attachment, MB</string>
  <string name="preference_debugging_info_in_ui_title">Debugging information in a User Interface</string>
  <string name="preference_log_everything_to_file_title">Log everything to file</string>
  <string name="preference_log_network_level_messages_title">Log network level messages to files</string>
  <string name="preference_use_kitkat_media_chooser_title">Modern interface to select an attachment</string>
  <string name="refresh_title">Refresh from cache</string>
  <string name="refresh_timeline_automatically_title">Refresh timeline automatically</string>
  <string name="refresh_timeline_automatically_summary">Timeline is refreshed from a local cache. No Internet access is needed.</string>
  <string name="show_buttons_below_message">Show Reply, Repost and Favorite buttons below a note</string>
  <string name="summary_preference_appearance">Change AndStatus look and feel</string>
  <string name="summary_preference_enable_android_backup_off">No Android backups will be requested</string>
  <string name="summary_preference_enable_android_backup_on">AndStatus notifies Android on data changes to be backed up (experimental)</string>
  <string name="summary_preference_frequency">Updates are fetched every {0}.</string>
  <string name="summary_preference_history_size">Latest {0} are retained.</string>
  <string name="summary_preference_history_time">Note history is retained for {0}.</string>
  <string name="summary_preference_theme_color">Color and style</string>
  <string name="summary_preference_min_log_level">The level is {0}.</string>
  <string name="summary_preference_show_avatars_off">No actor avatars will be displayed</string>
  <string name="summary_preference_show_avatars_on">Actor avatars will be displayed</string>
  <string name="summary_preference_storage">Where and what information to store. Check and back up your data.</string>
  <string name="summary_preference_sync_indicator_on_timeline_off">No sync indicator</string>
  <string name="summary_preference_sync_indicator_on_timeline_on">You will see timeline sync progress in a separate bar below a Timeline</string>
  <string name="summary_preference_sync_while_using_application_off">No background sync while browsing timeline and conversations in order to preserve smoothness of scrolling</string>
  <string name="summary_preference_sync_while_using_application_on">Background sync is always on. Timeline may freeze sometimes.</string>
  <string name="summary_preference_syncing">When to sync timeline and how to indicate this</string>
  <string name="summary_preference_theme_size">Select text size</string>
  <string name="summary_preference_user_in_timeline">Actor will be shown as \"{0}\"</string>
  <string name="switch_to_default_timeline">Switch to Default Timeline</string>
  <string name="tap_on_a_timeline_title_behaviour">Behavior when tapping a Timeline title</string>
  <string name="timeline_is_combined_by_default">Timeline is Combined by default</string>
  <string name="timeline_title_home">Home</string>
  <string name="title_account">Account</string>
  <string name="title_preference_about_application">About AndStatus</string>
  <string name="title_preference_appearance">Appearance</string>
  <string name="title_preference_connection_timeout">Connection timeout</string>
  <string name="title_preference_debugging">Troubleshooting</string>
  <string name="title_preference_download_attachments_over_wifi_only">Download attachments over Wi-Fi only</string>
  <string name="title_preference_enable_android_backup">Enable automatic Android backup</string>
  <string name="title_preference_frequency">Default sync frequency</string>
  <string name="title_preference_history_size">History Size</string>
  <string name="title_preference_history_time">History Time</string>
  <string name="title_preference_min_log_level">Minimum logging level</string>
  <string name="title_preference_old_messages_first_in_conversation">Old notes first in a Conversation view</string>
  <string name="title_preference_mark_replies_in_timeline">Mark replies to me in a Timeline</string>
  <string name="title_preference_report_bug">Report a bug</string>
  <string name="title_preference_storage">Storage</string>
  <string name="title_preference_storage_external">External Storage</string>
  <string name="title_preference_sync_after_message_was_sent">Sync after a note was sent</string>
  <string name="title_preference_sync_indicator_on_timeline">Syncing indicator in a Timeline</string>
  <string name="title_preference_sync_while_using_application">Sync while using AndStatus</string>
  <string name="title_preference_syncing">Syncing</string>
  <string name="title_preference_theme_color">Color Theme</string>
  <string name="title_preference_theme_size">Size</string>
  <string name="title_preference_username">Username</string>
  <string name="title_preference_show_avatars">Display Avatars</string>
  <string name="title_preference_show_attached_images">Download and display attached images</string>
  <string name="title_preference_show_origin">Display a Social network in a Timeline</string>
  <string name="title_preference_user_in_timeline">How to show an actor in a Timeline</string>
  <string name="title_timeline">Timeline</string>
</resources>