<?xml version="1.0" encoding="utf-8"?>
<!-- 
    Copyright (c) 2015 yvolk (Yuri Volkov), http://yurivolkov.com

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	     http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
				  android:title="@string/attachments">
    <org.andstatus.app.context.MultilineCheckBoxPreference android:key="show_attached_images"
        android:defaultValue="true"
        android:title="@string/title_preference_show_attached_images" />
    <org.andstatus.app.context.MultilineCheckBoxPreference android:key="attach_images"
        android:defaultValue="true"
        android:title="@string/attach_images_title"
        android:summaryOn="@string/attach_images_summary_on"
        android:summaryOff="@string/attach_images_summary_off" />
    <org.andstatus.app.context.MultilineCheckBoxPreference android:key="download_attachments_over_wifi_only"
        android:title="@string/title_preference_download_attachments_over_wifi_only"
        android:defaultValue="true"
        android:dependency="show_attached_images" />
    <org.andstatus.app.context.MultilineEditTextPreference android:key="maximum_size_of_attachment_mb"
        android:singleLine="true"
        android:defaultValue="5"
        android:title="@string/maximum_size_of_attachment_mb" />
    <org.andstatus.app.context.MultilineCheckBoxPreference android:key="use_kitkat_media_chooser"
        android:title="@string/preference_use_kitkat_media_chooser_title"
        android:defaultValue="true"
        android:dependency="show_attached_images" />
</PreferenceScreen>
